--- a/Code/manga/komi/komi15.html
+++ b/Code/manga/komi/komi15.html
@@ -629,7 +629,7 @@ bottombox .bottombox {
 			<lowerbox>
 				<div class="lowerbox">
 					<div style="display: inline-block;">
-						<div><a href="../../../index.html" class="logo" style="text-decoration: none; color: black;">BOOKPEDIA</a></div>
+						<div><a href="https://thaitruonggg.github.io/Bookpedia.github.io/" class="logo" style="text-decoration: none; color: black;">BOOKPEDIA</a></div>
 					</div>
 					<div style="display: inline-block; float: right;">
 					<div id="menu">	
